--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "slugify": "^1.3.4",
     "util": "^0.12.5",
     "validator": "^10.11.0",
-    "xss-clean": "^0.1.1"
+    "xss-clean": "^0.1.1",
+    "stripe": "^7.0.0"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
@@ -51,8 +52,7 @@
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4",
     "parcel": "^2.9.3",
-    "prettier": "^1.17.0",
-    "stripe": "^7.63.1"
+    "prettier": "^1.17.0"
   },
   "engines": {
     "node": ">=10.0.0"
