--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^7.0.0",
     "express": "^4.18.2",
@@ -37,10 +38,10 @@
     "pug": "^3.0.2",
     "sharp": "^0.32.5",
     "slugify": "^1.3.4",
+    "stripe": "^7.0.0",
     "util": "^0.12.5",
     "validator": "^10.11.0",
-    "xss-clean": "^0.1.1",
-    "stripe": "^7.0.0"
+    "xss-clean": "^0.1.1"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
